# a2a_protocol

./: pyproject.toml  requirements.txt
simple/: __main__.py  agent.py  agentexecutor.py  client.py
